<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/jdl"
                android:layout_marginTop="50dp"
                android:text="@string/judul"
                android:textAlignment="center"
                android:textSize="36sp"
                android:textStyle="bold"/>
            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_marginTop="25dp"
                    android:layout_marginBottom="10dp">

                    <EditText
                        android:layout_width="197dp"
                        android:layout_height="match_parent"
                        android:id="@+id/nmdpan"
                        android:hint="@string/nmdpn">
                    </EditText>
                    <EditText
                        android:layout_width="194dp"
                        android:layout_height="match_parent"
                        android:id="@+id/nmblkg"
                        android:hint="@string/nmblk">
                    </EditText>
                </TableRow>
                <TableRow
                    android:layout_width="match_parent"
                    android:layout_height="78dp"
                    android:layout_marginTop="10dp"
                    >

                    <EditText
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:id="@+id/tmpt"
                        android:hint="@string/tmp">

                    </EditText>

                    <EditText
                        android:layout_width="213dp"
                        android:layout_height="match_parent"
                        android:id="@+id/tgllhr"
                        android:hint="@string/tgl">

                    </EditText>

                </TableRow>

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="93dp"
                    android:layout_marginVertical="40dp"
                    android:layout_marginTop="10dp"
                    android:id="@+id/almt"
                    android:hint="@string/alm">

                </EditText>
                <RadioGroup>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="10dp"
                        android:text="@string/jnsklm"
                        android:textSize="17sp">
                    </TextView>
                    <TableRow

                        android:layout_marginTop="15dp">
                        <RadioButton
                            android:text="@string/lk"
                            android:layout_marginHorizontal="15dp">

                        </RadioButton>
                        <RadioButton
                            android:text="@string/pr"
                            android:layout_marginHorizontal="15dp">

                        </RadioButton>
                    </TableRow>

                </RadioGroup>
                <TableRow
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp">
                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agm"
                            >

                        </TextView>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/islam">

                        </RadioButton>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/katolik"
                            >

                        </RadioButton>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buddha">

                        </RadioButton>
                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/alrn">

                        </RadioButton>

                    </RadioGroup>

                    <RadioGroup
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="19dp">

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/kristen">

                        </RadioButton>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/hindu">

                        </RadioButton>

                        <RadioButton
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/konghucu">

                        </RadioButton>


                    </RadioGroup>

                </TableRow>
                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:id="@+id/tlpn"
                    android:hint="@string/tlp">

                </EditText>
                <EditText
                    android:layout_height="wrap_content"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="30dp"
                    android:id="@+id/mail"
                    android:hint="@string/email">

                </EditText>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"

                    android:id="@+id/pass"
                    android:hint="@string/pw"
                    android:inputType="textPassword"
                    >

                </EditText>

                <EditText
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"

                    android:id="@+id/ckpass"
                    android:hint="@string/ckpw"
                    android:inputType="textPassword">

                </EditText>

                <TableRow
                    android:layout_marginTop="30dp">

                    <Button
                        android:text="@string/kmbl"
                        android:textStyle="bold">


                    </Button>

                    <Button
                        android:text="@string/dftr"
                        android:textStyle="bold"
                        >


                    </Button>
                </TableRow>




            </TableLayout>


        </LinearLayout>



    </ScrollView>










</androidx.constraintlayout.widget.ConstraintLayout>